# docs/swagger.yaml
@@ -377,11 +377,11 @@ paths:
       description: Stops drone movement while preserving existing queue
       responses:
         "200":
-          description: Drone unlocked successfully
+          description: Drone locked successfully
           schema:
             type: body
         "500":
-          description: Drone unable to unlock (already unlocked?)
+          description: Drone unable to lock (already locked?)
           schema:
             type: body
       summary: Halts drone in place while preserving queue
@@ -452,6 +452,21 @@ paths:
         "200":
           description: OK
       summary: Take off Drone
+      tags:
+      - Drone
+  /drone/unlock:
+    get:
+      description: Stops drone movement while preserving existing queue
+      responses:
+        "200":
+          description: Drone unlocked successfully
+          schema:
+            type: body
+        "500":
+          description: Drone unable to unlock (already unlocked?)
+          schema:
+            type: body
+      summary: Halts drone in place while preserving queue
       tags:
       - Drone
   /ground_object:
